--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: Poppins;
+  background: #f9fafb;
+}
+
+.custom-gradient {
+  background-color: #99a3ff;
+  background-color: #b399ff;
+  background-image: radial-gradient(
+      at 19% 64%,
+      hsla(238, 90%, 64%, 1) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 71% 1%, hsla(185, 87%, 60%, 1) 0px, transparent 50%),
+    radial-gradient(at 54% 71%, hsla(128, 72%, 60%, 1) 0px, transparent 50%),
+    radial-gradient(at 16% 20%, hsla(253, 72%, 67%, 1) 0px, transparent 50%),
+    radial-gradient(at 55% 36%, hsla(252, 77%, 65%, 1) 0px, transparent 50%);
+}
